SF Primes/src/objects/Employee_QC_Headcount__c.object
<CustomObject>
    <description>Summary table to identify # of reps that reported to a specific DOS. Sales roll-up counts</description>
    <fields>
        <fullName>Employee_Information__c</fullName>
        <label>Employee Information</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee QC Headcount</relationshipLabel>
        <relationshipName>Employee_QC_Headcount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QC_Headcount__c</fullName>
        <label>QC Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee QC Headcount</label>
    <nameField>
        <displayFormat>EHC-{00000}</displayFormat>
        <label>Employee QC Headcount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee QC Headcount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>